Modify constraint-layout version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
     compileSdkVersion 30
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
     defaultConfig {
         applicationId 'com.example.android.navigation'
