--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
     ext {
         version_kotlin = "1.4.30"
         version_core = "1.3.2"
-        version_constraint_layout = "2.1.0-rc1"
+        version_constraint_layout = "2.0.4"
         version_lifecycle_extensions = "2.2.0"
         version_material = "1.3.0"
         version_navigation = "2.3.0"
